--- a/src/global.scss
+++ b/src/global.scss
@@ -1,2 +1,10 @@
 // $mainColor: #1ee000;
 $mainColor: rgb(0, 255, 0);
+
+$width: 768px;
+
+@mixin mobile {
+    @media (max-width: #{$width}) {
+        @content
+    }
+}
