--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -4,6 +4,10 @@
     display: flex;
     color: $mainColor;
 
+    @include mobile {
+        flex-direction: column;
+    }
+
     .left {
         flex: 0.5;
         overflow: hidden;
@@ -17,15 +21,30 @@
             justify-content: center;
             flex-direction: column;
 
+            @include mobile {
+                width: 100%;
+                height: 100%;;
+            }
+
             h3 {
                 text-align: center;
                 font-size: 30px;
                 margin-bottom: 25px;
+
+                @include mobile {
+                    font-size: 22px;
+                }
             }
 
             p{
                 font-size: 20px;
                 width: 500px;
+
+                @include mobile {
+                    text-align: center;
+                    width: 100%;
+                    font-size: 16px;
+                }
 
                 a {
                     color: $mainColor;
@@ -41,12 +60,21 @@
 
     .right {
         flex: 0.5;
+
+        @include mobile {
+            height: 100%;
+        }
         
         h3 {
             font-size: 30px;
             text-align: center;
             margin-top: 10vh;
             margin-bottom: 10vh;
+
+            @include mobile {
+                margin: 0;
+                font-size: 22px;
+            }
         }
 
         ul {
@@ -57,6 +85,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @include mobile {
+                margin: 10px 0;
+            }
             
             li {
                 text-align: center;
