--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -3,19 +3,18 @@
 .Intro {
     display: flex;
 
-    video{
-        object-fit: cover;
-        width: 100vw;
-        height: calc(100vh - 70px);
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 0;
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
     }
 
     .left {
         flex: 0.5;
         overflow: hidden;
+
+        @include mobile {
+            flex: 0.6;
+        }
 
         .imageContainer {
             position: relative;
@@ -27,6 +26,10 @@
             justify-content: center;
             float: none;
 
+            @include mobile {
+                align-items: flex-start;
+            }
+
             img {
                 border-radius: 5%;
                 border: 2px solid $mainColor;
@@ -34,6 +37,12 @@
                 height: 55%;
                 width: 55%;
                 transition: all 1.5s ease;
+
+                @include mobile {
+                    margin-top: 2.5rem;
+                    width: 50%;
+                    height: 50%;
+                }
             }            
 
             #portrait {
@@ -44,6 +53,10 @@
                 position: absolute;
                 image-rendering: pixelated;
                 filter: grayscale(100%);
+
+                @include mobile {
+                    opacity: 0;
+                }
             
                 &:hover {
                     opacity: 0;
@@ -57,6 +70,10 @@
             position: absolute;
             bottom: 10px;
             right: 48.5vw;
+
+            @include mobile {
+                right: 45vw;
+            }
 
             .arrow {
                 width: 3rem;
@@ -76,6 +93,10 @@
         flex: 0.5;
         position: relative;
 
+        @include mobile {
+            flex: 0.4;
+        }
+
         .wrapper {
             color: $mainColor;
             width: 100%;
@@ -85,17 +106,34 @@
             flex-direction: column;
             justify-content: center;
 
+            @include mobile {
+                padding-left: 0;
+                align-items: center;
+            }
+
             h1 {
                 font-size: 3.5rem;
                 margin: 0.625rem 0;
+
+                @include mobile {
+                    font-size: 2.3rem;
+                }
             }
 
             h2 {
                 font-size: 2rem;
+
+                @include mobile {
+                    font-size: 1.5rem;
+                }
             }
 
             h3 {
                 font-size: 1.875rem;
+
+                @include mobile {
+                    font-size: 1.25rem;
+                }
                 
                 span {
                     font-size: inherit;
